--- a/index.html
+++ b/index.html
@@ -9,11 +9,37 @@
 
   <style>
     html,
-    body {
-      margin: 0;
+    .card {
+      margin: 20;
       padding: 0;
-      font-family: sans-serif;
-      background-color: #ededed;
+      font-family: 'Courier New', Courier, monospace;
+      background-color: white;
+    }
+
+    logo-card2[accent-color="blue"]{
+      --logo-card-accent-color: blue;
+    }
+
+    logo-card2[accent-color="gray"]{
+      --logo-card-accent-color: gray;
+    }
+
+    logo-card2[accent-color="red"]{
+      --logo-card-accent-color: red;
+    }
+
+    logo-card2[accent-color="white"]{
+      --logo-card-accent-color: white;
+    }
+
+    button {
+      border-color: 10px navy;
+      color: navy; 
+      text-align: center;
+      size: 10px 10px;
+      background-color: white;
+      margin: auto;
+      box-shadow: 0px 0px 5px black;
     }
   </style>
   <title>dashboard-search</title>
