--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
       <section>
         <h3>Featured Badges</h3>
         <ul>
-          <div class="card">
-            <h2>My Heading</h2>
-            <h3>Title</h3>
-            <p>By Author Title</p>
-            <img
-              src="https://badgesapp.psu.edu/uploads/badge/image/692/icon125-color15.png"
-              alt="Image Description"
-            />
+          <div class="wrapper">
+            <div class="badgeTitle">Technology & information</div>
+            <div class="badgeBody">APA Style Citations: Introduction</div>
+            <div class="img">
+              <img
+                src="https://badgesapp.psu.edu/uploads/badge/image/337/APA_Style.png"
+                width="100"
+                height="100"
+              />
+            </div>
+            <div class="author">Creator: Andrew Morrison</div>
           </div>
         </ul>
       </section>
@@ -149,55 +152,51 @@
     font-size: 1rem;
     outline: none;
   }
-  .card {
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    width: 250px;
-    height: 135px;
-    background-color: #fff;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    margin: 10px;
+  .wrapper {
+    background-color: lightgray;
+    color: white;
+    padding: 2px 2px 2px 20px;
     text-align: center;
-    position: relative;
-  }
-  .card::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #0097a7;
-    border-radius: 10px;
-    z-index: -1;
-  }
-
-  .card h2 {
-    font-size: 1.2rem;
-    color: #fff;
-    margin: 0;
-    float: left;
-  }
-
-  .card h3 {
-    font-size: 1rem;
-    margin: 0;
-    float: left;
-  }
-
-  .card p {
-    font-size: 1rem;
-    color: #666;
-    margin: 1rem 0 2rem 0;
-  }
-
-  .card img {
-    max-width: 60px;
+    width: 400px;
+    height: auto;
     border-radius: 5px;
-    margin-bottom: 1rem;
+  }
+
+  .badgeTitle {
+    background-color: lightblue;
+    color: white;
+    padding: 10px 8px;
+    text-align: left;
+    border-radius: 5px;
+    color: black;
+  }
+  .badgeBody {
+    background-color: white;
+    color: black;
+    text-align: left;
+    padding: 2px 2px 2px 5px;
+    font-size: 20px;
+  }
+  .author {
+    background-color: white;
+    text-align: left;
+    color: black;
+    padding: 2px 2px 2px 5px;
+  }
+  .img {
+    text-align: right;
+    background-color: white;
+  }
+  .tblock {
+    color: black;
+    padding: 12px 20px 15px 20px;
+    background-color: grey;
+    margin: 25px;
+  }
+  .bblock {
+    color: black;
+    padding: 12px 20px 15px 20px;
+    background-color: grey;
+    margin: 25px;
   }
 </style>
