removing heading tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <h1>Digital Badges App</h1>
+      <div>Digital Badges App</div>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -15,7 +15,7 @@
       </nav>
     </header>
     <main>
-      <h2>Welcome to the Explore Badges App</h2>
+      <div>Welcome to the Explore Badges App</div>
       <p>
         Here you can find various badges that you can earn by completing
         different activities and challenges.
@@ -26,7 +26,7 @@
         <button type="submit">Go</button>
       </form>
       <section>
-        <h3>Featured Badges</h3>
+        <div>Featured Badges</div>
         <ul>
           <div class="wrapper">
             <div class="badgeTitle">Technology & information</div>
