--- a/index.html
+++ b/index.html
@@ -28,18 +28,7 @@
       <section>
         <div>Featured Badges</div>
         <ul>
-          <div class="wrapper">
-            <div class="badgeTitle">Technology & information</div>
-            <div class="badgeBody">APA Style Citations: Introduction</div>
-            <div class="img">
-              <img
-                src="https://badgesapp.psu.edu/uploads/badge/image/337/APA_Style.png"
-                width="100"
-                height="100"
-              />
-            </div>
-            <div class="author">Creator: Andrew Morrison</div>
-          </div>
+          <dashboard-search></dashboard-search>
         </ul>
       </section>
     </main>
@@ -200,3 +189,4 @@
     margin: 25px;
   }
 </style>
+<script type="module" src="./src/dashboard-search.js"></script>
