In Progress Work

--- a/index.html
+++ b/index.html
@@ -189,4 +189,7 @@
     margin: 25px;
   }
 </style>
-<script type="module" src="./src/dashboard-search.js"></script>
+<script type="module" >
+import "./src/dashboard-search.js"
+import "./src/card-list.js"
+</script>
