--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
       <section>
         <div>Featured Badges</div>
         <ul>
+          <dashboard-search></dashboard-search> <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
         </ul>
       </section>
