--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <section>
         <div>Featured Badges</div>
         <ul>
-          <dashboard-search></dashboard-search> <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
@@ -38,6 +37,9 @@
           <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
           <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          <dashboard-search></dashboard-search>
+          
         </ul>
       </section>
     </main>
