Post Deadline Fix
We understand that this fix was after the deadline for the project.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 
 <style>
   /* Global Styles */
+  dashboard-search[accent-color="lightgray"]{
+      --badge-card-accent-color: lightgray;
+    }
+
   body {
     margin: 0;
     font-family: Arial, sans-serif;
